# switchboard

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  mkdocs.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  shared.css  sitemap.xml
.github/workflows/: ci.yml  publish-docs.yml  release.yml
ARCHITECTURE/: index.html
DESIGN/: index.html
PROTOCOL/: index.html
api-reference/: index.html
autonomy-tiers/: index.html
claude-contributor/: index.html
contributing/: index.html
dashboard/: index.html
docs/: ARCHITECTURE.md  DESIGN.md  PROTOCOL.md  api-reference.md  autonomy-tiers.md  claude-contributor.md  contributing.md  dashboard.md  first-agent.md  hardware.md  index.md  local-development.md  protected-actions.md  quickstart.md  security.md  sensor-integration.md  shared.css  sidecar.md  trust-boundary.md
e2e/: screenshots.spec.ts
examples/: register-fleet.py
examples/hooks/: claude-code-hook.sh
first-agent/: index.html
hardware/: index.html
herald/: __init__.py  app.py
local-development/: index.html
protected-actions/: index.html
quickstart/: index.html
scripts/: check_test_quality.py  seed-demo-data.py
search/: search_index.json
security/: index.html
sensor-integration/: index.html
sidecar/: README.md  herald-sidecar.py  index.html  switchboard-sidecar.py
switchboard/: __init__.py  app.py
tests/: conftest.py  test_agents.py  test_auth.py  test_events.py  test_health.py  test_integrity.py  test_policy.py  test_storage.py  test_telemetry.py
trust-boundary/: index.html
(+11 files in other folders)
