[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "switchboard"
version = "2026.2.19.dev0"
description = "Governance protocol for AI agent fleets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Matthew Hendricks", email = "matthew.scott.hendricks@gmail.com" },
]
dependencies = [
    "fastapi>=0.104",
    "pydantic>=2.0",
    "uvicorn>=0.24",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["switchboard*"]
